--- a/css/base.css
+++ b/css/base.css
@@ -6,3 +6,27 @@ body
 	margin: 0px;
 	overflow: hidden;
 }
+#infoBox {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: rgba(0, 0, 0, 0.7);
+	color: white;
+	padding: 20px;
+	border-radius: 10px;
+	max-width: 300px;
+	text-align: center;
+	display: none;
+	z-index: 10;
+}
+
+#infoBox h3 {
+	margin: 0;
+	font-size: 24px;
+}
+
+#infoBox p {
+	margin: 10px 0 0;
+	font-size: 16px;
+}
